Création d'une liste de base au niveau de l'activité main affichant les musiques de la playliste de l'utilisateur.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,5 @@
 
     <color name="facebook">#3C5998</color>
     <color name="twitter">#409AD5</color>
-    <color name="google">#E14739</color>
+    <color name="google">#e14739</color>
 </resources>
