--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -11,13 +11,17 @@
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="10dp">
 
         <EditText
             android:id="@+id/search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Rechercher" />
+            android:drawableLeft="@drawable/ic_search_black_24dp"
+            android:hint="Rechercher"
+            android:imeOptions="actionSearch"
+            android:inputType="text" />
     </android.support.design.widget.TextInputLayout>
 
     <ListView
