--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/view4"
+            android:id="@+id/cover"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@color/blanc"></ImageView>
