Création d'une interface pour la modification de la playliste.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,10 +10,19 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@+id/lecteur"
         android:orientation="vertical"
         tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp"
-        android:layout_above="@+id/lecteur">
+        tools:layout_editor_absoluteY="8dp">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/colorPrimary"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="@style/AppTheme"
+            app:titleTextColor="@color/blanc" />
 
         <ListView
             android:id="@+id/playlist"
@@ -60,8 +69,9 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="20dp"
-                android:layout_toLeftOf="@+id/btnPlayPause"
+                android:layout_toStartOf="@+id/btnPlayPause"
                 android:background="@drawable/roundcorner"
+                android:contentDescription="Bouton précédent"
                 app:srcCompat="@drawable/ic_btnprevious"></ImageButton>
 
             <ImageButton
@@ -71,6 +81,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:background="@drawable/roundcorner"
+                android:contentDescription="Bouton play"
                 app:srcCompat="@drawable/ic_btnplay"></ImageButton>
 
             <ImageButton
@@ -79,7 +90,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="20dp"
-                android:layout_toRightOf="@+id/btnPlayPause"
+                android:layout_toEndOf="@+id/btnPlayPause"
                 android:background="@drawable/roundcorner"
                 app:srcCompat="@drawable/ic_btnnext"></ImageButton>
         </RelativeLayout>
