--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#011011</color>
     <color name="colorAccent">#DB600D</color>
 
-    <color name="blanc">#fff</color>
+    <color name="blanc">#ffffff</color>
 
     <color name="connexion">#fff</color>
     <color name="inscription">#000</color>
