Ajout de la fonctionnalité d'ajout et de suppression de musics dans la playliste.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:text="Ajouter" />
+            android:text="Ajouter"
+            android:visibility="gone" />
 
     </LinearLayout>
 
