--- a/app/src/main/res/layout/music_item.xml
+++ b/app/src/main/res/layout/music_item.xml
@@ -20,7 +20,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/title"
+            android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="3dp"
