--- a/app/src/main/res/layout/activity_share.xml
+++ b/app/src/main/res/layout/activity_share.xml
@@ -5,7 +5,7 @@
     android:gravity="center">
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/name"
+        android:id="@+id/txtName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -17,10 +17,10 @@
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/description"
+        android:id="@+id/txtDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/name">
+        android:layout_below="@+id/txtName">
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/txtDescription"
@@ -33,7 +33,7 @@
         android:id="@+id/btnShare"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/description"
+        android:layout_below="@+id/txtDescription"
         android:layout_centerHorizontal="true"
         android:text="Partager" />
 </RelativeLayout>
