--- a/app/src/main/res/layout/music_edition_item.xml
+++ b/app/src/main/res/layout/music_edition_item.xml
@@ -28,7 +28,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/name"
+                android:id="@+id/txtName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingBottom="3dp"
