--- a/app/src/main/res/layout/music_edition_item.xml
+++ b/app/src/main/res/layout/music_edition_item.xml
@@ -19,44 +19,36 @@
         android:layout_toEndOf="@+id/cover"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:id="@+id/infos"
+        <TextView
+            android:id="@+id/name"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="50dp"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingBottom="3dp"
-                android:paddingTop="3dp"
-                android:text="Title"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-        </LinearLayout>
+            android:paddingBottom="3dp"
+            android:paddingTop="3dp"
+            android:text="Title"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
         <LinearLayout
             android:id="@+id/actions"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="50dp"
             android:layout_weight="1"
             android:orientation="horizontal">
 
             <Button
                 android:id="@+id/btnDelete"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="Supprimer" />
 
             <Button
                 android:id="@+id/btnEdit"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="Modifier" />
         </LinearLayout>
