--- a/app/src/main/res/layout/music_item.xml
+++ b/app/src/main/res/layout/music_item.xml
@@ -26,6 +26,7 @@
             android:paddingBottom="3dp"
             android:paddingTop="3dp"
             android:text="Title"
+            android:textColor="@color/colorPrimaryDark"
             android:textSize="18sp"
             android:textStyle="bold" />
 
@@ -34,6 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Author"
+            android:textColor="@color/colorPrimaryDark"
             android:textSize="12sp"
             android:textStyle="italic" />
     </LinearLayout>
